[package]
name = "procdump-rs"
version = "0.0.1"
edition = "2021"
authors = ["Akshay Anand <drdrag0n@pm.me>"]
description = "Creates minidump of a process!"

[[bin]]
name = "dump"
path = "src/main.rs"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive"] }
log = "0.4.21"

[dependencies.windows]
version = "0.57.0"
features = [
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_Memory"
]
